# Zenith

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py
backend/api/: agents.py  auth.py  datasets.py  deploy.py  experiments.py  features.py  models.py  monitor.py  projects.py  prompts.py
backend/core/: config.py  database.py  security.py  telemetry.py
backend/models/: agent.py  dataset.py  experiment.py  feature.py  init.py  model.py  project.py  prompt.py  user.py
backend/schemas/: experiment.py  model.py  project.py  user.py
backend/services/: agents.py  data.py  evaluation.py  inference.py  monitoring.py  training.py
backend/tasks/: celery_app.py  monitoring_tasks.py  training_tasks.py
backend/utils/: evaluators.py  lineage.py  tracing.py
docs/: api.md  architecture.md
examples/: llm_finetuning_example.py  rag_agent_example.py  tabular_ml_example.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/stores/: authStore.ts  themeStore.ts
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Datasets.tsx  Deployments.tsx  Experiments.tsx  Login.tsx  ModelRegistry.tsx  Monitoring.tsx  Projects.tsx
jupyter/: Dockerfile  jupyter_lab_config.py
kubernetes/: values.yaml
kubernetes/templates/: backend-deployment.yaml  backend-service.yaml
scripts/: deploy_llm_endpoint.py  download_example_data.py  launch_training_job.py  run_monitoring_check.py
tests/: test_api.py
