[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenith-ml"
version = "0.1.0"
description = "The Zenith of Machine Learning Platforms - AI-first MLOps for 2026"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Zenith Team", email = "team@zenith-ml.ai"}
]
keywords = ["mlops", "machine-learning", "llm", "rag", "agents", "mlflow", "feature-store"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "optuna>=4.0.0",
    "evidently>=0.4.40",
    "opentelemetry-api>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
all = [
    "jupyterlab>=4.2.0",
    "tritonclient[all]>=2.50.0",
    "sentence-transformers>=3.2.0",
    "langchain>=0.3.0",
    "chromadb>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/zenith-ml"
Documentation = "https://zenith-ml.readthedocs.io"
Repository = "https://github.com/yourusername/zenith-ml.git"
Issues = "https://github.com/yourusername/zenith-ml/issues"

[tool.setuptools]
packages = ["zenith"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=backend --cov-report=html --cov-report=term"
